--- a/index.html
+++ b/index.html
@@ -1,80 +1,23 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <link rel="stylesheet" href="css/flipTimer.css" />
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Trade+Winds&display=swap');
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>10000 Hours Timer</title>
+    <link rel="stylesheet" href="css/app.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script type="module" src="js/app.js"></script>
 
-    body {
-      background: #aaaaaa;
-      position: relative;
-      height: 100vh;
-      overflow: hidden;
-    }
-
-    /* h1 {
-      font-family: 'Trade Winds', cursive;
-      color: red;
-      font-size: 60px;
-      text-align: center;
-      text-shadow: 0px 7px 4px rgba(0, 255, 255, 0.568);
-      margin-top: 70px;
-      margin-bottom: 50px;
-    } */
-
-    .flipTimer {
-      margin-left:auto;
-      margin-right:auto;
-      left:0;
-      right:0;
-
-      text-align: center;
-      position: absolute;
-      top: 45%;
-      transform: translateY(-45%);
-    }
-
- 
-  
-
-  </style>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="js/jquery.flipTimer.js"></script>
-
-  <script>
-    $(document).ready(function () {
-      if (localStorage.getItem("seconds")) {
-        var seconds = localStorage.getItem("seconds");
-      } else {
-        var seconds = 0;
-      }
-      if (localStorage.getItem("minutes")) {
-        var minutes = localStorage.getItem("minutes");
-      } else {
-        var minutes = 0;
-      }
-      if (localStorage.getItem("hours")) {
-        var hours = localStorage.getItem("hours");
-      } else {
-        var hours = 1233;
-      }
-      $('.flipTimer').flipTimer({
-        init_seconds: seconds,
-        init_minutes: minutes,
-        init_hours: hours,
-        step: 1000
-      });
-    });
-  </script>
 </head>
 
 <body>
-  <div class="flipTimer">
-    <div class="hours"></div>
-    <div class="minutes"></div>
-    <div class="seconds"></div>
-  </div>
+    <div class="flipTimer">
+        <div class="hours"></div>
+        <div class="minutes"></div>
+        <div class="seconds"></div>
+    </div>
 </body>
 
 </html>
